--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>WYA</title>
     <link rel="shortcut icon" href="images/logo123.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Bloodlust&display=swap" rel="stylesheet">
     <style>
+        html, body {
+            overflow: hidden;
+            position: fixed;
+            width: 100%;
+            height: 100%;
+        }
+
         body {
             background-image: url("images/bg1.jpg");
             background-position: center;
@@ -21,7 +28,6 @@
             align-items: center;
             min-height: 100vh;
             position: relative;
-            overflow-x: hidden;
         }
 
         .container {
@@ -204,6 +210,7 @@
                 top: 0;
                 height: 100vh;
                 justify-content: center;
+                overflow-y: auto;
             }
 
             .menu-items a {
