--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>WYA</title>
     <link rel="shortcut icon" href="images/logo123.ico" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css2?family=Bloodlust&display=swap" rel="stylesheet">
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
         html, body {
             overflow: hidden;
             position: fixed;
@@ -20,7 +20,7 @@
             background-size: cover;
             margin: 0;
             padding: 0;
-            font-family: 'Bloodlust', cursive;
+            font-family: 'Poppins', sans-serif;
             color: #e0e0e0;
             display: flex;
             flex-direction: column;
